load.yaml
apiVersion: v1
kind: Service
metadata:
    name: lb-gowebapp
    labels:
        name: gowebapp
spec:
    type: LoadBalancer
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    selector:
        app: gowebapp
