service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gowebapp-service
  namespace: go
  labels:
    app: gowebapp
spec:
  type: ClusterIP
  selector:
    app: gowebapp
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
