ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-ingress
spec:
  backend:
    serviceName: gowebapp-service
    servicePort: 80
